Fix apache config

--- a/etc/shopping-apache.conf
+++ b/etc/shopping-apache.conf
@@ -1,5 +1,5 @@
 <Directory /var/www/html/shopping>
-    Options +ExecCGI -MultiViews
+    Options +ExecCGI -MultiViews +FollowSymLinks
     AddHandler cgi-script .cgi
     AllowOverride None
     AcceptPathInfo On
