Drag and drop items

--- a/etc/shopping-apache.conf
+++ b/etc/shopping-apache.conf
@@ -9,6 +9,15 @@
     AuthName "Shopping List"
     AuthUserFile /var/www/html/shopping/.htpasswd
     Require valid-user
+
+    # Disable caching, at least while developing it
+    # The mobile Ff caches scripts too well
+    <FilesMatch "\.js$">
+        Header set Cache-Control "no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires 0
+    </FilesMatch>
+
 </Directory>
 
 # Protect the data directory
